--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "firebase": "^9.21.0",
     "firebase-config": "^1.0.0",
     "firebaseui": "^6.0.2",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebaseui": "^6.0.0",
