--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-dom": "^18.2.0",
     "react-firebaseui": "^6.0.0",
     "react-hook-form": "^7.43.9",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
+    "redux-logger": "^3.0.6",
     "sweetalert2": "^11.7.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -56,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
     "tailwindcss": "^3.3.1"
   }
 }
